[project]
name = "x-post-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastai>=2.8.6",
    "fastapi>=0.127.0",
    "grandalf>=0.8",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
